objects/Assigned_Fee__c.object
<CustomObject>
    <description>Junction object between Fee&apos;s and another object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with the fee.</description>
        <inlineHelpText>Account associated with the fee.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assigned Fees</relationshipLabel>
        <relationshipName>Assigned_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Different_Than_Default__c</fullName>
        <description>If Override Amount is different than the Fee&apos;s default amount, this field is checked.</description>
        <formula>Override_Amount__c &lt;&gt; Fee__r.Default_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Different Than Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount for this Assigned Fee</description>
        <formula>IF( ISBLANK(Override_Amount__c), Fee__r.Default_Amount__c, Override_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_End_Date__c</fullName>
        <description>Auction End Date for Associated Case</description>
        <formula>Case__r.Auction_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case associated with the fee.</description>
        <inlineHelpText>Case associated with the fee.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assigned Fees</relationshipLabel>
        <relationshipName>Assigned_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Fee_Accessed__c</fullName>
        <description>The date when the Fee Status changed to Fee assessed. Fee assessed status is set when the Title is received or max fee limit has reached.</description>
        <inlineHelpText>The date when the Fee Status changed to Fee assessed. Fee assessed status is set when the Title is received or max fee limit has reached.</inlineHelpText>
        <label>Date Fee Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Status__c</fullName>
        <description>Indicates if the fee has been paid or not.</description>
        <inlineHelpText>Indicates if the fee has been paid or not.</inlineHelpText>
        <label>Fee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Pending</fullName>
                    <default>true</default>
                    <label>Fee Pending</label>
                </value>
                <value>
                    <fullName>Fee Assessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>The Type of Fee associated</description>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Assigned Fees</relationshipLabel>
        <relationshipName>Assigned_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Amount__c</fullName>
        <defaultValue>null</defaultValue>
        <description>If indicated, is used over the default amount on fee</description>
        <label>Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Billable_Amount__c</fullName>
        <description>Currently, it holds the maximum amount of Title late fee we could have potentially charged if there was no cap on the max late fee amount. Later, we can add more outstanding potential balances/fees.</description>
        <inlineHelpText>Currently, it holds the maximum amount of Title late fee we could have potentially charged if there was no cap on the max late fee amount.</inlineHelpText>
        <label>Potential Billable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private_Lane__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Private Lane associated this Fee</description>
        <label>Private Lane</label>
        <referenceTo>Private_Lane__c</referenceTo>
        <relationshipLabel>Assigned Fees</relationshipLabel>
        <relationshipName>Assigned_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Contact_Email__c</fullName>
        <description>Seller contact email form the related case - Populated via Flow Called &quot;Title late Fee Assigned Email&quot;</description>
        <label>Seller Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Territory_Manager_Email__c</fullName>
        <description>Seller contact email form the related case - Populated via Flow Called &quot;Title late Fee Assigned Email&quot;</description>
        <label>Seller Territory Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Territory_Manager__c</fullName>
        <description>Seller TM associated with the Case for use in Title late Fee Assessed Email</description>
        <formula>Case__r.Seller_Territory_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Title_Clerk_Email__c</fullName>
        <description>Seller contact email form the related case - Populated via Flow Called &quot;Title late Fee Assigned Email&quot;</description>
        <label>Seller Title Clerk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Title_Due_Date__c</fullName>
        <description>Title Due date associated with the Case for use in Title late Fee Assessed Email</description>
        <formula>Case__r.Title_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <description>Currently, it holds the the total amount of unpaid Title late fee. Later, we can add other outstanding balance.</description>
        <inlineHelpText>It holds the the total amount of unpaid Title late fee.</inlineHelpText>
        <label>Total Billable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Vin_Last_6__c</fullName>
        <description>last 6 of Vin associated with the Case for use in Title late Fee Assessed Email</description>
        <formula>Case__r.Vehicle_VIN_Last_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Vin Last 6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Make_Model__c</fullName>
        <description>Year make Model of vehicle associated with the Case for use in Title late Fee Assessed Email</description>
        <formula>Case__r.Vehicle_Year_Make_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle/Year/Make/Model</label>
        <type>Text</type>
    </fields>
    <label>Assigned Fee</label>
    <nameField>
        <displayFormat>AF-{0}</displayFormat>
        <label>Assigned Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Fees</pluralLabel>
    <recordTypes>
        <fullName>Standard_Fee</fullName>
        <active>true</active>
        <label>Standard Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Late_Fee</fullName>
        <active>true</active>
        <description>Late Fee when the Title is not received by the due date.</description>
        <label>Title Late Fee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>